WTF Creations v4.4  Live Printify Sync + Shop Redesign

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#content">Content</a></li>
                 <li><a href="#worldcup">World Cup</a></li>
-                <li><a href="watchthefallrecords.html">WTF Creations</a></li>
+                <li><a href="wtfcreations.html">Shop</a></li>
                 <li><a href="#directory">Directory</a></li>
             </ul>
         </div>
@@ -64,8 +64,8 @@
             </h1>
             <p class="hero-tagline">A network documenting the collapse of civilization through the lens of social media analytics.</p>
             <div class="hero-cta">
-                <a href="#content" class="btn btn-primary">Contribute</a>
-                <a href="watchthefallrecords.html" class="btn btn-secondary">Shop Merch</a>
+                <a href="#content" class="btn btn-primary">Explore Content</a>
+                <a href="wtfcreations.html" class="btn btn-secondary">Shop Merch</a>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -112,7 +112,7 @@
                 <!-- Products will be loaded here via printify_sync.js -->
             </div>
             <div class="section-cta">
-                <a href="watchthefallrecords.html" class="btn btn-primary">View All Products</a>
+                <a href="wtfcreations.html" class="btn btn-primary">View All Products</a>
             </div>
         </div>
     </section>
@@ -219,7 +219,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="watchthefallrecords.html">Shop</a></li>
+                        <li><a href="wtfcreations.html">Shop</a></li>
                         <li><a href="#directory">Directory</a></li>
                     </ul>
                 </div>
