Subpage Content Consoles v4.5.1  YouTube, X, Threads Integration

--- a/ai.html
+++ b/ai.html
@@ -155,9 +155,17 @@
         </div>
     </section>
 
+    <!-- Content Console -->
+    <section id="content-console" class="section content-console-section">
+        <div class="container">
+            <!-- Content loaded dynamically by content_console.js -->
+        </div>
+    </section>
+
     <!-- Scripts -->
     <script src="scripts/utils/version.js"></script>
     <script src="scripts/network.js"></script>
+    <script src="scripts/content_console.js"></script>
     
     <!-- Fade-in Animation Script -->
     <script>
