--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -136,6 +136,13 @@
         </div>
     </section>
 
+    <!-- Content Console -->
+    <section id="content-console" class="section content-console-section">
+        <div class="container">
+            <!-- Content loaded dynamically by content_console.js -->
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="main-footer">
         <div class="container">
@@ -167,5 +174,6 @@
     <!-- Scripts -->
     <script src="../../scripts/utils/version.js"></script>
     <script src="../../scripts/network.js"></script>
+    <script src="../../scripts/content_console.js"></script>
 </body>
 </html>
