Subpage Redesign  Remove Featured Content, Add Social/Support Buttons

--- a/ai.html
+++ b/ai.html
@@ -155,6 +155,31 @@
         </div>
     </section>
 
+    <!-- Social & Support Actions -->
+    <section class="section social-actions-section">
+        <div class="container">
+            <h2 class="section-title" style="color: #00ffcc; text-shadow: 0 0 15px rgba(0, 255, 204, 0.4);">Connect & Support</h2>
+            <div class="action-buttons">
+                <a href="https://www.instagram.com/ai.wtf" target="_blank" class="action-btn instagram-btn">
+                    <span class="btn-icon">📷</span>
+                    <span class="btn-text">Instagram</span>
+                </a>
+                <a href="https://www.tiktok.com/@ai.wtf" target="_blank" class="action-btn tiktok-btn">
+                    <span class="btn-icon">📱</span>
+                    <span class="btn-text">TikTok</span>
+                </a>
+                <a href="watchthefallrecords.html" class="action-btn shop-btn">
+                    <span class="btn-icon">🛒</span>
+                    <span class="btn-text">WTF Creations</span>
+                </a>
+                <a href="#support" class="action-btn support-btn">
+                    <span class="btn-icon">💰</span>
+                    <span class="btn-text">Support Us</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Content Console -->
     <section id="content-console" class="section content-console-section">
         <div class="container">
