--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -85,53 +85,27 @@
         </div>
     </section>
 
-    <!-- Regional Content Section -->
-    <section class="section regional-content">
+    <!-- Social & Support Actions -->
+    <section class="section social-actions-section">
         <div class="container">
-            <h2 class="section-title">Featured Scottish Content</h2>
-            <div class="content-grid">
-                <div class="content-card card">
-                    <h3>Edinburgh Updates</h3>
-                    <p>Latest from Scotland's capital - politics, culture, and urban decay</p>
-                    <a href="#" class="btn btn-secondary">View Content</a>
-                </div>
-                <div class="content-card card">
-                    <h3>Glasgow Chronicles</h3>
-                    <p>Documenting life in Scotland's largest city</p>
-                    <a href="#" class="btn btn-secondary">View Content</a>
-                </div>
-                <div class="content-card card">
-                    <h3>Highland Reports</h3>
-                    <p>Rural Scotland's perspective on the fall</p>
-                    <a href="#" class="btn btn-secondary">View Content</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Top Scottish Creators -->
-    <section class="section creators-section">
-        <div class="container">
-            <h2 class="section-title">Top Scottish Creators</h2>
-            <div class="creators-grid">
-                <div class="creator-card card">
-                    <div class="creator-rank">#1</div>
-                    <h3>@ScotlandFalls</h3>
-                    <p class="creator-stats">850K followers • Edinburgh</p>
-                    <p>Political commentary and cultural critique</p>
-                </div>
-                <div class="creator-card card">
-                    <div class="creator-rank">#2</div>
-                    <h3>@GlasgowWatch</h3>
-                    <p class="creator-stats">620K followers • Glasgow</p>
-                    <p>Urban decay and social commentary</p>
-                </div>
-                <div class="creator-card card">
-                    <div class="creator-rank">#3</div>
-                    <h3>@HighlandsTruth</h3>
-                    <p class="creator-stats">380K followers • Inverness</p>
-                    <p>Rural perspectives on societal collapse</p>
-                </div>
+            <h2 class="section-title">Connect & Support</h2>
+            <div class="action-buttons">
+                <a href="https://www.instagram.com/scotland.wtf" target="_blank" class="action-btn instagram-btn">
+                    <span class="btn-icon">📷</span>
+                    <span class="btn-text">Instagram</span>
+                </a>
+                <a href="https://www.tiktok.com/@scotland.wtf" target="_blank" class="action-btn tiktok-btn">
+                    <span class="btn-icon">📱</span>
+                    <span class="btn-text">TikTok</span>
+                </a>
+                <a href="../../watchthefallrecords.html" class="action-btn shop-btn">
+                    <span class="btn-icon">🛒</span>
+                    <span class="btn-text">WTF Creations</span>
+                </a>
+                <a href="#support" class="action-btn support-btn">
+                    <span class="btn-icon">💰</span>
+                    <span class="btn-text">Support Us</span>
+                </a>
             </div>
         </div>
     </section>
