Add X, YouTube, Threads buttons to social section

--- a/ai.html
+++ b/ai.html
@@ -168,6 +168,18 @@
                     <span class="btn-icon">📱</span>
                     <span class="btn-text">TikTok</span>
                 </a>
+                <a href="https://x.com/aiwtf" target="_blank" class="action-btn x-btn">
+                    <span class="btn-icon">𝕏</span>
+                    <span class="btn-text">X</span>
+                </a>
+                <a href="https://www.youtube.com/@aiwtf" target="_blank" class="action-btn youtube-btn">
+                    <span class="btn-icon">▶️</span>
+                    <span class="btn-text">YouTube</span>
+                </a>
+                <a href="https://www.threads.net/@aiwtf" target="_blank" class="action-btn threads-btn">
+                    <span class="btn-icon">🧵</span>
+                    <span class="btn-text">Threads</span>
+                </a>
                 <a href="watchthefallrecords.html" class="action-btn shop-btn">
                     <span class="btn-icon">🛒</span>
                     <span class="btn-text">WTF Creations</span>
