Add Scotland Anthem Player + Feed Hungry Cats Button + Remove WTF Suffix

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </h1>
             <p class="hero-tagline">A network documenting the collapse of civilization through the lens of social media analytics.</p>
             <div class="hero-cta">
-                <a href="#content" class="btn btn-primary">Explore Content</a>
+                <a href="#support" class="btn btn-primary">Feed Hungry Cats!</a>
                 <a href="wtfcreations.html" class="btn btn-secondary">Shop Merch</a>
             </div>
         </div>
@@ -132,11 +132,11 @@
                     </div>
                     <p class="category-desc">United Kingdom and constituent nations</p>
                     <div class="hub-links collapsed">
-                        <a href="regional/pages/britain-directory.html" class="hub-link">BritainWTF</a>
-                        <a href="regional/pages/scotland.html" class="hub-link">ScotlandWTF</a>
-                        <a href="#" class="hub-link">EnglandWTF</a>
-                        <a href="#" class="hub-link">WalesWTF</a>
-                        <a href="#" class="hub-link">Northern Ireland WTF</a>
+                        <a href="regional/pages/britain-directory.html" class="hub-link">Britain</a>
+                        <a href="regional/pages/scotland.html" class="hub-link">Scotland</a>
+                        <a href="#" class="hub-link">England</a>
+                        <a href="#" class="hub-link">Wales</a>
+                        <a href="#" class="hub-link">Northern Ireland</a>
                     </div>
                 </div>
 
@@ -148,14 +148,14 @@
                     </div>
                     <p class="category-desc">Continental European nations</p>
                     <div class="hub-links collapsed">
-                        <a href="#" class="hub-link">EuropeWTF</a>
-                        <a href="#" class="hub-link">IrelandWTF</a>
-                        <a href="#" class="hub-link">FranceWTF</a>
-                        <a href="#" class="hub-link">GermanyWTF</a>
-                        <a href="#" class="hub-link">NetherlandsWTF</a>
-                        <a href="#" class="hub-link">PolandWTF</a>
-                        <a href="#" class="hub-link">ItalyWTF</a>
-                        <a href="#" class="hub-link">SwedenWTF</a>
+                        <a href="#" class="hub-link">Europe</a>
+                        <a href="#" class="hub-link">Ireland</a>
+                        <a href="#" class="hub-link">France</a>
+                        <a href="#" class="hub-link">Germany</a>
+                        <a href="#" class="hub-link">Netherlands</a>
+                        <a href="#" class="hub-link">Poland</a>
+                        <a href="#" class="hub-link">Italy</a>
+                        <a href="#" class="hub-link">Sweden</a>
                     </div>
                 </div>
 
@@ -167,10 +167,10 @@
                     </div>
                     <p class="category-desc">Western nations and democracies</p>
                     <div class="hub-links collapsed">
-                        <a href="#" class="hub-link">TheWestWTF</a>
-                        <a href="#" class="hub-link">USAWTF</a>
-                        <a href="#" class="hub-link">CanadaWTF</a>
-                        <a href="#" class="hub-link">AustraliaWTF</a>
+                        <a href="#" class="hub-link">The West</a>
+                        <a href="#" class="hub-link">USA</a>
+                        <a href="#" class="hub-link">Canada</a>
+                        <a href="#" class="hub-link">Australia</a>
                     </div>
                 </div>
 
@@ -182,8 +182,8 @@
                     </div>
                     <p class="category-desc">Artificial intelligence and technology</p>
                     <div class="hub-links collapsed">
-                        <a href="ai.html" class="hub-link">AIWTF</a>
-                        <a href="ai.html" class="hub-link">AITechWTF</a>
+                        <a href="ai.html" class="hub-link">AI</a>
+                        <a href="ai.html" class="hub-link">AI Tech</a>
                     </div>
                 </div>
 
@@ -195,11 +195,11 @@
                     </div>
                     <p class="category-desc">Worldwide networks and special projects</p>
                     <div class="hub-links collapsed">
-                        <a href="index.html" class="hub-link">WatchTheFallWTF</a>
-                        <a href="#" class="hub-link">GadgetsWTF</a>
-                        <a href="#" class="hub-link">ComedyWTF</a>
-                        <a href="#" class="hub-link">DarkHumourWTF</a>
-                        <a href="#" class="hub-link">ConceptsWTF</a>
+                        <a href="index.html" class="hub-link">WatchTheFall</a>
+                        <a href="#" class="hub-link">Gadgets</a>
+                        <a href="#" class="hub-link">Comedy</a>
+                        <a href="#" class="hub-link">Dark Humour</a>
+                        <a href="#" class="hub-link">Concepts</a>
                         <a href="watchthefallrecords.html" class="hub-link">WTF Records</a>
                     </div>
                 </div>
