--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -58,6 +58,26 @@
         </div>
     </section>
 
+    <!-- Scotland Anthem -->
+    <section class="section anthem-section">
+        <div class="container">
+            <div class="anthem-player">
+                <div class="anthem-info">
+                    <span class="anthem-icon">🎵</span>
+                    <div class="anthem-text">
+                        <h3 class="anthem-title">Scotland WTF Anthem</h3>
+                        <p class="anthem-subtitle">Official theme by WTF Records</p>
+                    </div>
+                </div>
+                <audio id="scotland-anthem" controls preload="metadata">
+                    <source src="../../assets/brand_anthems/Scotland WTF Anthem.m4a" type="audio/mp4">
+                    <source src="../../assets/brand_anthems/Scotland WTF Anthem.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+        </div>
+    </section>
+
     <!-- Scotland Stats Section -->
     <section class="section scotland-stats">
         <div class="container">
