Scotland Hero Redesign  Split-Style Title + Centered Layout + Glitch Effect

--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -52,9 +52,12 @@
             <div class="breadcrumb">
                 <a href="../../feed.html">Directory</a> / <span>Scotland</span>
             </div>
-            <h1 class="page-title scotland-title">🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland WTF</h1>
-            <p class="page-subtitle">Alba Gu Bràth - Documenting the fall in Scotland</p>
-            <p class="page-description">From Edinburgh to the Highlands, tracking civilization's descent through Scottish eyes</p>
+            <h1 class="page-title scotland-title">
+                <span class="scotland-text">🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland</span>
+                <span class="wtf-text">WatchTheFall</span>
+            </h1>
+            <p class="page-subtitle">Alba Gu Bràth — Documenting the fall in Scotland</p>
+            <p class="page-description">From Edinburgh to the Highlands, tracking civilization’s descent through Scottish eyes</p>
         </div>
     </section>
 
