Add WTF + Scotland Logos to Hero  Replace Flag Emoji

--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -52,8 +52,12 @@
             <div class="breadcrumb">
                 <a href="../../feed.html">Directory</a> / <span>Scotland</span>
             </div>
+            <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" />
             <h1 class="page-title scotland-title">
-                <span class="scotland-text">🏴󠁧󠁢󠁳󠁣󠁴󠁿 Scotland</span>
+                <span class="scotland-text">
+                    <img src="../../assets/logos/scotland-wtf-logo.png" alt="Scotland" class="scotland-flag-logo" />
+                    Scotland
+                </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Alba Gu Bràth — Documenting the fall in Scotland</p>
