Update Navigation  Replace Content with Support (Donations Page)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#content">Content</a></li>
+                <li><a href="donate.html">Support</a></li>
                 <li><a href="#worldcup">World Cup</a></li>
                 <li><a href="wtfcreations.html">Shop</a></li>
                 <li><a href="#directory">Directory</a></li>
