--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -38,7 +38,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="../../index.html">Home</a></li>
-                <li><a href="../../index.html#tiktok">TikTok 5-Pack</a></li>
+                <li><a href="../../donate.html">Support</a></li>
                 <li><a href="../../index.html#worldcup">World Cup</a></li>
                 <li><a href="../../watchthefallrecords.html">WTF Creations</a></li>
                 <li><a href="../../feed.html">Directory</a></li>
