--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -21,6 +21,7 @@
     <!-- Cinematic Video Background -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline>
+            <source src="../../assets/video/bg_video_scotland.mp4" type="video/mp4">
             <source src="../../assets/video/main_bg.mp4" type="video/mp4">
         </video>
         <div class="video-overlay scotland-overlay"></div>
