England WTF Fixed - Red St George Colors + Corrected Text

--- a/regional/pages/england.html
+++ b/regional/pages/england.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>England WTF | WatchTheFall Regional Hub</title>
-    <meta name="description" content="WatchTheFall Scotland - Documenting the fall of England">
+    <meta name="description" content="WatchTheFall England - Documenting England's descent">
     
     <meta name="theme-color" content="#d4af37">
     <link rel="manifest" href="../../manifest.json">
@@ -63,18 +63,18 @@
     <section class="regional-hero england-hero">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../../feed.html">Directory</a> / <span>Scotland</span>
+                <a href="../../feed.html">Directory</a> / <span>England</span>
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title england-title">
                 <span class="england-text">
-                    <img src="../../assets/logos/england-wtf-logo.png" alt="Scotland" class="england-flag-logo" loading="eager" />
-                    Scotland
+                    <img src="../../assets/logos/england-wtf-logo.png" alt="England" class="england-flag-logo" loading="eager" />
+                    England
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">St George - Witnessing England's descent</p>
-            <p class="page-description">From Edinburgh to the Highlands, tracking civilizationâ€™s descent through Scottish eyes</p>
+            <p class="page-description">From city streets to countryside, documenting the decline of the English nation</p>
         </div>
     </section>
 
@@ -188,7 +188,7 @@
                 <div class="footer-info">
                     <h4>England WTF</h4>
                     <p>Part of WatchTheFall Network</p>
-                    <p>St</p>
+                    <p>St George's Cross</p>
                 </div>
             </div>
             <div class="footer-bottom">
