--- a/regional/pages/poland.html
+++ b/regional/pages/poland.html
@@ -242,7 +242,7 @@
                 document.getElementById('weekly-content-stat').textContent = weeklyContent + '+';
                 
             } catch (error) {
-                console.error('Failed to load Scotland stats:', error);
+                console.error('Failed to load Poland stats:', error);
                 // Fallback values
                 document.getElementById('total-followers-stat').textContent = '0';
             }
