Fix Ireland Breadcrumb & Title - Scotland References Removed

--- a/regional/pages/ireland.html
+++ b/regional/pages/ireland.html
@@ -63,18 +63,18 @@
     <section class="regional-hero ireland-hero">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../../feed.html">Directory</a> / <span>Scotland</span>
+                <a href="../../feed.html">Directory</a> / <span>Ireland</span>
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title ireland-title">
                 <span class="ireland-text">
-                    <img src="../../assets/logos/ireland-wtf-logo.png" alt="Scotland" class="ireland-flag-logo" loading="eager" />
-                    Scotland
+                    <img src="../../assets/logos/ireland-wtf-logo.png" alt="Ireland" class="ireland-flag-logo" loading="eager" />
+                    Ireland
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Eire Go Brach - Tracking Ireland's unraveling</p>
-            <p class="page-description">From Edinburgh to the Highlands, tracking civilizationâ€™s descent through Scottish eyes</p>
+            <p class="page-description">From Dublin to the countryside, witnessing Ireland's transformation</p>
         </div>
     </section>
 
