Fix Germany & France Pages - Remove Scotland References

--- a/regional/pages/france.html
+++ b/regional/pages/france.html
@@ -63,18 +63,18 @@
     <section class="regional-hero france-hero">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../../feed.html">Directory</a> / <span>Scotland</span>
+                <a href="../../feed.html">Directory</a> / <span>France</span>
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title france-title">
                 <span class="france-text">
-                    <img src="../../assets/logos/france-wtf-logo.png" alt="Scotland" class="france-flag-logo" loading="eager" />
-                    Scotland
+                    <img src="../../assets/logos/france-wtf-logo.png" alt="France" class="france-flag-logo" loading="eager" />
+                    France
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Liberte, Egalite, Fragilite - Observing France's ongoing crisis</p>
-            <p class="page-description">From Edinburgh to the Highlands, tracking civilizationâ€™s descent through Scottish eyes</p>
+            <p class="page-description">From Paris to the provinces, documenting France's decline</p>
         </div>
     </section>
 
