--- a/regional/pages/germany.html
+++ b/regional/pages/germany.html
@@ -63,18 +63,18 @@
     <section class="regional-hero germany-hero">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../../feed.html">Directory</a> / <span>Scotland</span>
+                <a href="../../feed.html">Directory</a> / <span>Germany</span>
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title germany-title">
                 <span class="germany-text">
-                    <img src="../../assets/logos/germany-wtf-logo.png" alt="Scotland" class="germany-flag-logo" loading="eager" />
-                    Scotland
+                    <img src="../../assets/logos/germany-wtf-logo.png" alt="Germany" class="germany-flag-logo" loading="eager" />
+                    Germany
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Einigkeit und Recht und Freiheit - Monitoring the collapse of German stability</p>
-            <p class="page-description">From Edinburgh to the Highlands, tracking civilizationâ€™s descent through Scottish eyes</p>
+            <p class="page-description">From Berlin to Munich, witnessing Germany's transformation</p>
         </div>
     </section>
 
