--- a/regional/pages/wales.html
+++ b/regional/pages/wales.html
@@ -10,6 +10,9 @@
     <link rel="manifest" href="../../manifest.json">
     <link rel="icon" type="image/png" href="../../assets/logos/wales-wtf-logo.png">
     
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <!-- Preload critical assets -->
     <link rel="preload" href="../../styles/app.css" as="style">
     <link rel="preload" href="../templates/wales_colors.css" as="style">
@@ -83,7 +86,7 @@
         <div class="container">
             <div class="anthem-player">
                 <div class="anthem-info">
-                    <span class="anthem-icon">ðŸŽµ</span>
+                    <span class="anthem-icon"><i class="fas fa-music"></i></span>
                     <div class="anthem-text">
                         <h3 class="anthem-title">Wales WTF Anthem</h3>
                         <p class="anthem-subtitle">Official theme by WTF Records</p>
@@ -104,19 +107,19 @@
             <h2 class="section-title">Wales Network</h2>
             <div class="stats-grid">
                 <div class="stat-card card">
-                    <div class="stat-icon">ðŸ“ˆ</div>
+                    <div class="stat-icon"><i class="fas fa-chart-line"></i></div>
                     <h3>Growth</h3>
                     <div class="stat-value" id="growth-stat">+0.6K</div>
                     <p>New followers this week</p>
                 </div>
                 <div class="stat-card card">
-                    <div class="stat-icon">ðŸ‘¥</div>
+                    <div class="stat-icon"><i class="fas fa-users"></i></div>
                     <h3>Total Reach</h3>
                     <div class="stat-value" id="total-followers-stat">Loading...</div>
                     <p>Total followers</p>
                 </div>
                 <div class="stat-card card">
-                    <div class="stat-icon">ðŸŽ¬</div>
+                    <div class="stat-icon"><i class="fas fa-video"></i></div>
                     <h3>Weekly Content</h3>
                     <div class="stat-value" id="weekly-content-stat">18+</div>
                     <p>Posts per week</p>
@@ -131,31 +134,31 @@
             <h2 class="section-title">Connect & Support</h2>
             <div class="action-buttons">
                 <a href="https://www.instagram.com/wales.wtf" target="_blank" class="action-btn instagram-btn">
-                    <span class="btn-icon">ðŸ“·</span>
+                    <span class="btn-icon"><i class="fab fa-instagram"></i></span>
                     <span class="btn-text">Instagram</span>
                 </a>
                 <a href="https://www.tiktok.com/@wales.wtf" target="_blank" class="action-btn tiktok-btn">
-                    <span class="btn-icon">ðŸ“±</span>
+                    <span class="btn-icon"><i class="fab fa-tiktok"></i></span>
                     <span class="btn-text">TikTok</span>
                 </a>
                 <a href="https://x.com/waleswtf" target="_blank" class="action-btn x-btn">
-                    <span class="btn-icon">ð•</span>
+                    <span class="btn-icon"><i class="fab fa-x-twitter"></i></span>
                     <span class="btn-text">X</span>
                 </a>
                 <a href="https://www.youtube.com/@waleswtf" target="_blank" class="action-btn youtube-btn">
-                    <span class="btn-icon">â–¶ï¸</span>
+                    <span class="btn-icon"><i class="fab fa-youtube"></i></span>
                     <span class="btn-text">YouTube</span>
                 </a>
                 <a href="https://www.threads.net/@waleswtf" target="_blank" class="action-btn threads-btn">
-                    <span class="btn-icon">ðŸ§µ</span>
+                    <span class="btn-icon"><i class="fab fa-threads"></i></span>
                     <span class="btn-text">Threads</span>
                 </a>
                 <a href="../../watchthefallrecords.html" class="action-btn shop-btn">
-                    <span class="btn-icon">ðŸ›’</span>
+                    <span class="btn-icon"><i class="fas fa-shopping-cart"></i></span>
                     <span class="btn-text">WTF Creations</span>
                 </a>
                 <a href="#support" class="action-btn support-btn">
-                    <span class="btn-icon">ðŸ’°</span>
+                    <span class="btn-icon"><i class="fas fa-hand-holding-usd"></i></span>
                     <span class="btn-text">Support Us</span>
                 </a>
             </div>
