Australia Royal Colors + Canada Instagram Link Fix

--- a/regional/pages/canada.html
+++ b/regional/pages/canada.html
@@ -130,7 +130,7 @@
         <div class="container">
             <h2 class="section-title">Connect & Support</h2>
             <div class="action-buttons">
-                <a href="https://www.instagram.com/canada.wtf" target="_blank" class="action-btn instagram-btn">
+                <a href="https://www.instagram.com/canadawtf_/" target="_blank" class="action-btn instagram-btn">
                     <span class="btn-icon"><i class="fab fa-instagram"></i></span>
                     <span class="btn-text">Instagram</span>
                 </a>
