Fixed stats section titles and loading scripts for Wales, USA, Europe, and Sweden

--- a/regional/pages/sweden.html
+++ b/regional/pages/sweden.html
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <!-- Scotland Stats Section -->
+    <!-- Sweden Stats Section -->
     <section class="section sweden-stats">
         <div class="container">
             <h2 class="section-title">Sweden Network</h2>
@@ -202,9 +202,9 @@
     <script src="../../scripts/network.js" defer></script>
     <script src="../../scripts/content_console.js" defer></script>
     
-    <!-- Scotland Stats Dynamic Loading (inline for immediate execution) -->
+    <!-- Sweden Stats Dynamic Loading (inline for immediate execution) -->
     <script>
-        // Load Scotland stats from World Cup data
+        // Load Sweden stats from World Cup data
         async function loadSwedenStats() {
             try {
                 const response = await fetch('../../data/worldcup.json');
