--- a/regional/pages/wales.html
+++ b/regional/pages/wales.html
@@ -101,7 +101,7 @@
         </div>
     </section>
 
-    <!-- Scotland Stats Section -->
+    <!-- Wales Stats Section -->
     <section class="section wales-stats">
         <div class="container">
             <h2 class="section-title">Wales Network</h2>
@@ -205,9 +205,9 @@
     <script src="../../scripts/network.js" defer></script>
     <script src="../../scripts/content_console.js" defer></script>
     
-    <!-- Scotland Stats Dynamic Loading (inline for immediate execution) -->
+    <!-- Wales Stats Dynamic Loading (inline for immediate execution) -->
     <script>
-        // Load Scotland stats from World Cup data
+        // Load Wales stats from World Cup data
         async function loadWalesStats() {
             try {
                 const response = await fetch('../../data/worldcup.json');
