--- a/regional/pages/europe.html
+++ b/regional/pages/europe.html
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <!-- Scotland Stats Section -->
+    <!-- Europe Stats Section -->
     <section class="section europe-stats">
         <div class="container">
             <h2 class="section-title">Europe Network</h2>
@@ -202,9 +202,9 @@
     <script src="../../scripts/network.js" defer></script>
     <script src="../../scripts/content_console.js" defer></script>
     
-    <!-- Scotland Stats Dynamic Loading (inline for immediate execution) -->
+    <!-- Europe Stats Dynamic Loading (inline for immediate execution) -->
     <script>
-        // Load Scotland stats from World Cup data
+        // Load Europe stats from World Cup data
         async function loadEuropeStats() {
             try {
                 const response = await fetch('../../data/worldcup.json');
