--- a/regional/pages/usa.html
+++ b/regional/pages/usa.html
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <!-- Scotland Stats Section -->
+    <!-- USA Stats Section -->
     <section class="section usa-stats">
         <div class="container">
             <h2 class="section-title">USA Network</h2>
@@ -202,9 +202,9 @@
     <script src="../../scripts/network.js" defer></script>
     <script src="../../scripts/content_console.js" defer></script>
     
-    <!-- Scotland Stats Dynamic Loading (inline for immediate execution) -->
+    <!-- USA Stats Dynamic Loading (inline for immediate execution) -->
     <script>
-        // Load Scotland stats from World Cup data
+        // Load USA stats from World Cup data
         async function loadUSAStats() {
             try {
                 const response = await fetch('../../data/worldcup.json');
