Restructured HTML and CSS to prevent text splitting on Wales, USA, Europe, and Sweden pages

--- a/regional/pages/europe.html
+++ b/regional/pages/europe.html
@@ -69,7 +69,7 @@
             <h1 class="page-title europe-title">
                 <span class="europe-text">
                     <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="europe-flag-logo" loading="eager" />
-                    Europe
+                    <span class="europe-country-name">Europe</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
