--- a/regional/pages/sweden.html
+++ b/regional/pages/sweden.html
@@ -69,7 +69,7 @@
             <h1 class="page-title sweden-title">
                 <span class="sweden-text">
                     <img src="../../assets/logos/sweden-wtf-logo.png" alt="Sweden" class="sweden-flag-logo" loading="eager" />
-                    Sweden
+                    <span class="sweden-country-name">Sweden</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
