--- a/regional/pages/usa.html
+++ b/regional/pages/usa.html
@@ -69,7 +69,7 @@
             <h1 class="page-title usa-title">
                 <span class="usa-text">
                     <img src="../../assets/logos/usa-wtf-logo.png" alt="USA" class="usa-flag-logo" loading="eager" />
-                    USA
+                    <span class="usa-country-name">USA</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
