--- a/regional/pages/wales.html
+++ b/regional/pages/wales.html
@@ -72,7 +72,7 @@
             <h1 class="page-title wales-title">
                 <span class="wales-text">
                     <img src="../../assets/logos/wales-wtf-logo.png" alt="Wales" class="wales-flag-logo" loading="eager" />
-                    Wales
+                    <span class="wales-country-name">Wales</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
